[package]
name = "TriServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telnet = "0.2.1"

codepage-437 = "0.1.0"
crossbeam-channel = "0.5.8"
uuid = { version = "1.9.1", features = ["v4"] }
local-ip-address = "0.6.1"